Fixed email line break on small screens.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -737,6 +737,10 @@ h2 {
   overflow-x: hidden;
 }
 
+.break-all {
+  word-break: break-all;
+}
+
 .border-4 {
   border-width: 4px;
 }
